# aoc

./: .clangd  .gitignore  CMakeLists.txt  README.md
2022/day01/: day01.cpp  makefile
2022/day03/: day03.cpp  makefile
2022/day04/: day04.cpp  makefile
2022/day05/: day05.cpp
2022/day06/: day06.cpp  run.sh
2022/day07/: day07.cpp
2022/day08/: day08.cpp  run.sh
2022/day1/: day1.cpp  makefile
2022/day3/: 2022-day3.cpp  makefile
2023/day01/: day01.cpp  makefile  run.sh
2023/day02/: day02.cpp
2023/day03/: day03.cpp  run.sh
2023/day04/: day04.cpp  run.sh
2023/day05/: CMakeLists.txt  day05.cpp
2023/day06/: day06.cpp
2023/day07/: day07.cpp  run.sh
2023/day1/: day1.cpp
cmake/: cmake_min_ver.cmake  compile_flags.cmake  get_target_name.cmake
day1/: CMakeLists.txt  day1  day1.cpp  main.cpp  makefile
dayXX/: dayXX.cpp  makefile
template-day/: day1.cpp  dayXX.cpp  makefile
templates/dayXX/: CMakeLists.txt  dayXX.cpp
utils/: CMakeLists.txt  makefile  string_list.cpp  string_list.h  string_utils.cpp  string_utils.h  test.cpp  utils.cpp  utils.h  vector.h
